# smart-account-sign

./: .gitignore  Cargo.toml  README.md
passkey-server/: Cargo.toml  README.md
passkey-server/src/: lib.rs  server.rs
smart-account-cli/: Cargo.toml
smart-account-cli/src/: main.rs  relayer.rs  signing.rs  transaction.rs
stellar-passkey/: Cargo.toml  README.md
stellar-passkey/src/: html.rs  lib.rs  server.rs  storage.rs
stellar-smart-account/: Cargo.toml
stellar-smart-account/src/: main.rs  relayer.rs  signing.rs  smart_account.rs  transaction.rs  wasm.rs
with-relayer/: Cargo.toml
with-relayer/src/: main.rs  signing.rs  smart_account.rs  wasm.rs
