[package]
name = "passkey-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "passkey_server"
path = "src/lib.rs"

[[bin]]
name = "passkey-server"
path = "src/bin/passkey-server.rs"

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

# Web server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Browser integration
webbrowser = "1.0"

# Async utilities
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Storage
directories = "5.0"

# Time
chrono = "0.4"

# CBOR parsing for attestation objects
serde_cbor = "0.11"

# CLI (for standalone binary)
clap = { version = "4", features = ["derive"] }
