[package]
name = "smart-account-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.37", features = ["derive", "env"] }
stellar-xdr = { version = "23.0.0", features = ["base64", "serde"] }
stellar-strkey = "0.0.13"
stellar-rpc-client = "23.2.0"
soroban-spec = "23.0.0"
soroban-spec-tools = "23.1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prettytable-rs = "0.10"
hex = "0.4.3"
ed25519-dalek = "2.1.1"
sha2 = "0.10"
rand = "0.8"
base64 = "0.21"
passkey-server = { path = "../passkey-server" }
p256 = { version = "0.13", features = ["ecdsa"] }
colored = "2.1"
